<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/new_image_fond_tablette"
    tools:context=".ui.selectEntry.SelectEntryActivity">

    <RelativeLayout android:id="@+id/select_entry_title_lyt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/select_entry_search_lyt"

        android:background="@color/main_ctrl_prop">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:paddingVertical="20dp"
            android:paddingHorizontal="40dp"

            android:textSize="30sp"
            android:textColor="@color/_white"
            android:textAllCaps="true"
            android:text="@string/_selection"/>

        <TextView android:id="@+id/select_entry_prev_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:gravity="center_vertical"
            android:padding="20dp"
            android:visibility="gone"

            android:text="@string/_prev"
            android:textColor="@color/_white"
            android:textSize="35sp"/>

        <ImageView android:id="@+id/select_entry_deco_btn"
            android:layout_width="70dp"
            android:layout_height="70dp"

            android:layout_alignParentEnd="true"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="5dp"

            android:contentDescription="@string/wait"

            android:src="@drawable/bouton_deconneter_blanc"/>

    </RelativeLayout>

    <RelativeLayout android:id="@+id/select_entry_search_lyt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@+id/select_entry_title_lyt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/select_entry_select_lyt">

        <EditText android:id="@+id/select_entry_search_input"
            android:layout_width="match_parent"
            android:layout_height="65dp"

            android:inputType="text"
            android:autofillHints=""
            android:hint="@string/hint_search"
            android:imeOptions="actionSearch"
            android:singleLine="true"
            android:textSize="24sp"/>

        <ImageView android:id="@+id/select_entry_search_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignParentEnd="true"

            android:contentDescription="@string/wait"
            android:src="@drawable/icone_loupe"/>

    </RelativeLayout>

    <ScrollView android:id="@+id/select_entry_select_lyt"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        app:layout_constraintTop_toBottomOf="@+id/select_entry_search_lyt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/select_entry_check_box_lyt">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical">

            <LinearLayout android:id="@+id/select_entry_agc_lyt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical"

                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="10dp">

                <FrameLayout android:id="@+id/select_entry_agc_blk"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="35dp"
                            android:layout_height="35dp"

                            android:layout_marginStart="25dp"

                            android:contentDescription="@string/lbl_agc"
                            android:src="@drawable/agence_vert"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:gravity="center"

                            android:textColor="@color/main_ctrl_prop"
                            android:textSize="20sp"
                            android:text="@string/lbl_agc"/>

                    </RelativeLayout>

                </FrameLayout>

                <TextView android:id="@+id/select_entry_agc_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"

                    android:layout_marginStart="80dp"/>

            </LinearLayout>

            <LinearLayout android:id="@+id/select_entry_grp_lyt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical"

                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="10dp">

                <FrameLayout android:id="@+id/select_entry_grp_blk"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="35dp"
                            android:layout_height="35dp"

                            android:layout_marginStart="25dp"

                            android:contentDescription="@string/lbl_grp"
                            android:src="@drawable/groupement_residences_vert"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:gravity="center"

                            android:textColor="@color/main_ctrl_prop"
                            android:textSize="20sp"
                            android:text="@string/lbl_grp"/>

                    </RelativeLayout>

                </FrameLayout>

                <TextView android:id="@+id/select_entry_grp_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"

                    android:layout_marginStart="80dp"/>

            </LinearLayout>

            <LinearLayout android:id="@+id/select_entry_rsd_lyt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical"

                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="10dp">

                <FrameLayout android:id="@+id/select_entry_rsd_blk"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="35dp"
                            android:layout_height="35dp"

                            android:layout_marginStart="25dp"

                            android:contentDescription="@string/lbl_rsd"
                            android:src="@drawable/residence_vert"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:gravity="center"

                            android:textColor="@color/main_ctrl_prop"
                            android:textSize="20sp"
                            android:text="@string/lbl_rsd"/>

                    </RelativeLayout>

                </FrameLayout>

                <TextView android:id="@+id/select_entry_rsd_spinner_line1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="80dp"
                    android:layout_marginEnd="20dp"
                    android:ellipsize="end"
                    android:singleLine="true"/>

                <TextView android:id="@+id/select_entry_rsd_spinner_line2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="80dp"
                    android:layout_marginEnd="20dp"
                    android:ellipsize="end"
                    android:singleLine="true"/>

            </LinearLayout>



        </LinearLayout>

    </ScrollView>

    <LinearLayout android:id="@+id/select_entry_check_box_lyt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@+id/select_entry_select_lyt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/select_entry_next_lyt"

        android:orientation="vertical">

        <CheckBox android:id="@+id/select_entry_proxi_chk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginBottom="20dp"
            android:layout_marginHorizontal="20dp"
            android:paddingHorizontal="10dp"

            android:checked="true"
            android:text="@string/zones_proxi"
            android:textColor="@color/main_ctrl_prop"
            android:textSize="24sp"/>

        <CheckBox android:id="@+id/select_entry_contra_chk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginBottom="20dp"
            android:layout_marginHorizontal="20dp"
            android:paddingHorizontal="10dp"

            android:checked="true"
            android:text="@string/zones_contrat"
            android:textColor="@color/main_ctrl_prop"
            android:textSize="24sp"/>

    </LinearLayout>

    <FrameLayout android:id="@+id/select_entry_next_lyt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@+id/select_entry_check_box_lyt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        android:layout_marginBottom="10dp">

        <Button android:id="@+id/select_entry_next_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@drawable/button_selected_green"
            android:textColor="@color/_white"
            android:textSize="20sp"
            android:text="@string/btn_next"/>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>